Unit test: improve ConfigValidator
500 lines of test for class aim to 100% coverage
about 20 types of reason of ConfigValidationException checked